Improve template. Add template to view bids.

--- a/public/enquiry.html
+++ b/public/enquiry.html
@@ -10,6 +10,132 @@
 
 </head>
 <body>
+<nav class="top-bar">
+    <section class="top-bar-section">
+		<ul class="left">
+			<li class="divider"></li>
+			<li><a href="home.html">Reverse Car Bay</a></li>
+			<li class="divider"></li>
+	        <li><a href="enquiry.html">My Enquirys</a></li>
+	        <li class="divider"></li>
+	     	<li><a href="">My Cars</a></li>
+	     	<li class="divider"></li>
+	     	<li><a href="">Edit Details</a></li>
+	     	<li class="divider"></li>
+	     	<li><a href="/logout.html">Log Out</a></li>
+	     	<li class="divider"></li>
+	    </ul>
+    </section>
+</nav>
+<div class="large-3 columns">
+	<form>
+		<div class="form-group">
+			<label>Brand</label>
+			<input type="text" class="form-control" name="brand">
+		</div>
+		<div class="form-group">
+			<label>Model</label>
+			<input type="text" class="form-control" name="model">
+		</div>
+		<div class="form-group">
+			<label>Colour</label>
+			<select>
+				<option>Black</option>
+				<option>Blue</option>
+				<option>Silver</option>
+			</select>
+		</div>
+		<div class="form-group">
+			<label>Age</label>
+			<input type="text" class="form-control" name="age">
+		</div>
+		<div class="form-group">
+			<label>Milage</label>
+			<input type="text" class="form-control" name="milage">
+		</div>
+		<div class="form-group">
+			<label>Milage</label>
+			<input type="text" class="form-control" name="milage">
+		</div>
+		<button type="submit" class="">Add Enquiry</button>
+	</form>
+</div>
+<div class="large-7 columns">
+	<table>
+	
+		<thead>
+			<tr>
+				<td>Brand</td>
+				<td>Model</td>
+				<td>Colour</td>
+				<td>Age</td>
+				<td>Milage</td>
+				<td>Asking Price</td>
+				<td>Remove</td>
+			</tr>	
+		</thead>
+		<tbody>
+			<tr>
+				<td>Ford</td>
+				<td>Mondeo</td>
+				<td>Black</td>
+				<td>2 Years Old</td>
+				<td>25000</td>
+				<td>$5000</td>
+				<td><a href="view-bids.html">New!</a></td>
+				<td><a href="view-bids.html">$6000</a></td>
+				<td><input type="checkbox"></td>
+			</tr>	
+			<tr>
+				<td>Ford</td>
+				<td>Mondeo</td>
+				<td>Black</td>
+				<td>2 Years Old</td>
+				<td>25000</td>
+				<td>$5000</td>
+				<td><a href="view-bids.html">New!</a></td>
+				<td><a href="view-bids.html">$6000</a></td>
+				<td><input type="checkbox"></td>
+			</tr>	
+			<tr>
+				<td>Ford</td>
+				<td>Mondeo</td>
+				<td>Black</td>
+				<td>2 Years Old</td>
+				<td>25000</td>
+				<td>$5000</td>
+				<td><a href="view-bids.html">New!</a></td>
+				<td><a href="view-bids.html">$6000</a></td>
+				<td><input type="checkbox"></td>
+			</tr>	
+			<tr>
+				<td>Ford</td>
+				<td>Mondeo</td>
+				<td>Black</td>
+				<td>2 Years Old</td>
+				<td>25000</td>
+				<td>$5000</td>
+				<td><a href="view-bids.html">New!</a></td>
+				<td><a href="view-bids.html">$6000</a></td>
+				<td><input type="checkbox"></td>
+			</tr>	
+			<tr>
+				<td>Ford</td>
+				<td>Mondeo</td>
+				<td>Black</td>
+				<td>2 Years Old</td>
+				<td>25000</td>
+				<td>$5000</td>
+				<td><a href="view-bids.html">New!</a></td>
+				<td><a href="view-bids.html">$6000</a></td>
+				<td><input type="checkbox"></td>
+			</tr>	
+		</tbody>
+	</table>
+</div>	
+</div>	
+
+
 
 	<script type="text/javascript" src="./js/modernizr.js"></script>
 	<script type="text/javascript" src="./lib/angular.min.js"></script>
