--- a/public/home.html
+++ b/public/home.html
@@ -14,13 +14,13 @@
     <section class="top-bar-section">
 		<ul class="left">
 			<li class="divider"></li>
-			<li><a>Reverse Car Bay</a></li>
+			<li><a href="home.html">Reverse Car Bay</a></li>
 			<li class="divider"></li>
-	        <li><a href=""></a></li>
+	        <li><a href="enquiry.html">My Enquirys</a></li>
 	        <li class="divider"></li>
-	     	<li><a href=""></a></li>
+	     	<li><a href="">My Cars</a></li>
 	     	<li class="divider"></li>
-	     	<li><a href=""></a></li>
+	     	<li><a href="">Edit Details</a></li>
 	     	<li class="divider"></li>
 	     	<li><a href="/logout.html">Log Out</a></li>
 	     	<li class="divider"></li>
@@ -29,7 +29,7 @@
 </nav>
 <div data-alert class="alert-box success radius">
 	<p>Someone has bid on your enquiry!</p>
-	<p>Click <a href="">here</a> to view the bid.</p>
+	<p>Click <a href="enquiry.html">here</a> to view the bid.</p>
 </div>
 <div class="large-2 columns">
 	<form>
@@ -43,7 +43,11 @@
 		</div>
 		<div class="form-group">
 			<label>Colour</label>
-			<input type="text" class="form-control" name="colour">
+			<select>
+				<option>Black</option>
+				<option>Blue</option>
+				<option>Silver</option>
+			</select>
 		</div>
 		<div class="form-group">
 			<label>Age</label>
@@ -124,6 +128,15 @@
 		</tbody>
 	</table>
 </div>	
+<div class="large-2">
+	<label>Car</label>
+	<select>
+		<option>My first car</option>
+		<option>Shitty car noone wants to buy</option>
+		<option>Stolen car</option>
+	</select>
+</div>
+
 
 
 
