Remove headings from view partials and update links between views.

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -11,6 +11,24 @@
 </head>
 <body ng-controller="mainController">
 
+	<nav class="top-bar">
+	    <section class="top-bar-section">
+			<ul class="left">
+				<li class="divider"></li>
+				<li><a href="#/home">Reverse Car Bay</a></li>
+				<li class="divider"></li>
+		        <li><a href="#/enquiry">My Enquirys</a></li>
+		        <li class="divider"></li>
+		     	<li><a href="">My Cars</a></li>
+		     	<li class="divider"></li>
+		     	<li><a href="">Edit Details</a></li>
+		     	<li class="divider"></li>
+		     	<li><a href="#/login">Log Out</a></li>
+		     	<li class="divider"></li>
+		    </ul>
+	    </section>
+	</nav>
+
 	<div ng-view>
 		
 	</div>
