--- a/public/app/index.html
+++ b/public/app/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 
 </head>
-<body ng-controller="mainController">
+<body>
 
 	<nav class="top-bar">
 	    <section class="top-bar-section">
@@ -35,8 +35,10 @@
 
 	<script type="text/javascript" src="../lib/js/modernizr.js"></script>
 	<script type="text/javascript" src="../lib/js/angular.min.js"></script>
+	<script type="text/javascript" src="../lib/js/angular-route.min.js"></script>
 	<script src="scripts/app.js"></script>
 	<script src="scripts/controller/mainController.js"></script>
-	<script type="text/javascript" src="../lib/js/angular-route.min.js"></script>
+	<script src="scripts/controller/homeController.js"></script>
+
 </body>
 </html>
