Add feature to post enquiries to the database

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -39,6 +39,7 @@
 	<script src="scripts/app.js"></script>
 	<script src="scripts/controller/mainController.js"></script>
 	<script src="scripts/controller/homeController.js"></script>
+		<script src="scripts/controller/enquiryController.js"></script>
 
 </body>
 </html>
