--- a/public/app/index.html
+++ b/public/app/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head >
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="../lib/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="../lib/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../lib/css/foundation.min.css">
+	<link rel="stylesheet" type="text/css" href="../lib/css/angular-motion.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/app.css">
+
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 	<style type="text/css">
@@ -42,6 +45,9 @@
 	<script type="text/javascript" src="../lib/js/modernizr.js"></script>
 	<script type="text/javascript" src="../lib/js/angular.js"></script>
 	<script type="text/javascript" src="../lib/js/angular-route.min.js"></script>
+	<script type="text/javascript" src="../lib/js/angular-animate.min.js"></script>
+	<script type="text/javascript" src="../lib/js/angular-strap.js"></script>
+	<script type="text/javascript" src="../lib/js/angular-strap.tpl.js"></script>
 	<script src="scripts/app.js"></script>
 	<script src="scripts/services.js"></script>
 	<script src="scripts/controller/mainController.js"></script>
