Add page for bids

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -25,6 +25,8 @@
 					<li class="divider"></li>
 					<li ng-show="user.isLogged"><a href="#/enquiry">My Enquiries</a></li>
 					<li ng-show="user.isLogged" class="divider"></li>
+					<li ng-show="user.isLogged"><a href="#/view-bids">My Bids</a></li>
+					<li ng-show="user.isLogged" class="divider"></li>
 				</ul>
 				<ul class="right">
 					<li class="divider"></li>
@@ -49,6 +51,7 @@
 	<script src="scripts/controller/enquiryController.js"></script>
 	<script src="scripts/controller/navController.js"></script>
 	<script src="scripts/controller/loginController.js"></script>
+	<script src="scripts/controller/viewBidController.js"></script>
 
 </body>
 </html>
