Add sign-up page and update TODO.

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -52,6 +52,7 @@
 	<script src="scripts/controller/navController.js"></script>
 	<script src="scripts/controller/loginController.js"></script>
 	<script src="scripts/controller/viewBidController.js"></script>
+	<script src="scripts/controller/signUpController.js"></script>
 
 </body>
 </html>
