--- a/public/app/modalTest.html
+++ b/public/app/modalTest.html
@@ -50,6 +50,7 @@
           <td>Age</td>
           <td>Milage</td>
           <td>Asking Price</td>
+          <td>Number of bids</td>
           <td></td>
         </tr> 
       </thead>
@@ -61,6 +62,10 @@
           <td>{{getAgeFromYear(enquiry.from_year)}} Years Old</td>
           <td>{{enquiry.milage}}</td>
           <td>{{enquiry.target_price}}</td>
+          <td>
+            Number of bids: {{numberOfBids(enquiry.enquiry_id)}}<br />
+            Lowest bid: {{lowestBid(enquiry.enquiry_id)}}
+          </td>
           <td><button ng-click="showPlaceBid(enquiry)" data-animation="am-fade-and-scale" data-placement="center" data-template="/app/views/bid.html" bs-modal="modal">Place Bid</button></td>
         </tr>   
       </tbody>
