Move slideshow to /public.

--- a/public/slideshow/index.html
+++ b/public/slideshow/index.html
@@ -58,7 +58,7 @@
 					<section>
 						<h1>Requirements <br />Analysis</h1>
 					</section>
-					<section data-background="../useCaseDiagram.svg">
+					<section data-background="img/useCaseDiagram.svg">
 					</section>
 					<section>
 						<h1>Constraints <br /> &amp; Limitations</h1>
@@ -95,21 +95,21 @@
 					<section>
 						<h1>Application </br> Architecture</h2>
 					</section>
-					<section data-background="../architecture.svg">
+					<section data-background="img/architecture.svg">
 					</section>
-					<section data-background="../model.svg">
+					<section data-background="img/model.svg">
 					</section>
-					<section data-background="../view.svg">
+					<section data-background="img/view.svg">
 					</section>
-					<section data-background="../controller.svg">
+					<section data-background="img/controller.svg">
 					</section>
 					<section>
 						<h2>Server Side Class Diagram</h2>
-						<img src="../PhpClassDiagram.png" alt="">
+						<img src="img/PhpClassDiagram.png" alt="">
 					</section>
 					<section>
 						<h2>Client Side Class Diagram</h2>
-						<img src="../JavascriptClassDiagram.png" alt="">
+						<img src="img/JavascriptClassDiagram.png" alt="">
 					</section>
 				</section>
 				<section>
@@ -118,12 +118,12 @@
 					</section>
 					<section>
 						<h2>Implementation Reuse</h2>
-						<img src="../Recycling_symbol.svg" alt="" class="unstyle">
+						<img src="img/Recycling_symbol.svg" alt="" class="unstyle">
 					</section>
 					<section>
 						<h2>Procedure Reuse</h2>
 						<h4>Cool Stuff in Angular</h4>
-						<img src="../AngularJS_logo.svg" alt="">
+						<img src="img/AngularJS_logo.svg" alt="">
 					</section>
 					<section>
 						<h2>ng-repeat</h2>
