Add login warning message

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -12,6 +12,17 @@
 			visibility: hidden;
 
 		}
+
+		.sign-up {
+			color: #ddd;
+		}
+		.sign-up a{
+			color: #ddd;
+		}
+		.sign-up a:hover{
+			color: #fff;
+		}
+
 	</style>
 
 </head>
