Add php class diagram and logo

--- a/public/slideshow/index.html
+++ b/public/slideshow/index.html
@@ -58,7 +58,7 @@
 					<section>
 						<h1>Requirements <br />Analysis</h1>
 					</section>
-					<section data-background="img/useCaseDiagram.svg">
+					<section data-background="img/useCaseDiagram.svg" data-background-size="1000px">
 					</section>
 					<section>
 						<h1>Constraints <br /> &amp; Limitations</h1>
@@ -95,19 +95,20 @@
 					<section>
 						<h1>Application </br> Architecture</h2>
 					</section>
-					<section data-background="img/architecture.svg">
+					<section data-background="img/architecture.svg" data-background-size="1000px">
 					</section>
-					<section data-background="img/model.svg">
+					<section data-background="img/model.svg" data-background-size="1000px">
 					</section>
-					<section data-background="img/view.svg">
+					<section data-background="img/view.svg" data-background-size="1000px">
 					</section>
-					<section data-background="img/controller.svg">
+					<section data-background="img/controller.svg" data-background-size="1000px">
 					</section>
+					<section data-background="img/PhpClassDiagram.svg" data-background-size="750px"></section>
 					<section>
 						<h2>Server Side Class Diagram</h2>
 						<img src="img/PhpClassDiagram.png" alt="">
 					</section>
-					<section>
+					<section >
 						<h2>Client Side Class Diagram</h2>
 						<img src="img/JavascriptClassDiagram.png" alt="">
 					</section>
