Fix the transitions between the slideshow and the app.

--- a/public/slideshow/index.html
+++ b/public/slideshow/index.html
@@ -49,16 +49,28 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
+					<img src="img/logo.svg">
+					<h2>an exercise in software reuse</h2>
+					<h3>by</h3>
+					<p>Johan Angelstam | Peter Keogh | Fredrik Salin</p>
+				</section>
+				<section>
 					<h1>Reverse Car Bay</h1>
 					<h3 class="fragment">...Like Ebay</h3>
 					<h4 class="fragment">...But for cars</h4>
 					<h5 class="fragment">...In Reverse</h5>
 				</section>
 				<section>
+					<h1><a href="/app">Demo</a></h1>
+				</section>
+				<section>
+					<h1>So how is it made?</h1>
+				</section>
+				<section>
 					<section>
 						<h1>Requirements <br />Analysis</h1>
 					</section>
-					<section data-background="img/useCaseDiagram.svg" data-background-size="1000px">
+					<section data-background="img/useCaseDiagram.svg">
 					</section>
 					<section>
 						<h1>Constraints <br /> &amp; Limitations</h1>
@@ -95,20 +107,19 @@
 					<section>
 						<h1>Application </br> Architecture</h2>
 					</section>
-					<section data-background="img/architecture.svg" data-background-size="1000px">
+					<section data-background="img/architecture.svg">
 					</section>
-					<section data-background="img/model.svg" data-background-size="1000px">
+					<section data-background="img/model.svg">
 					</section>
-					<section data-background="img/view.svg" data-background-size="1000px">
+					<section data-background="img/view.svg">
 					</section>
-					<section data-background="img/controller.svg" data-background-size="1000px">
+					<section data-background="img/controller.svg">
 					</section>
-					<section data-background="img/PhpClassDiagram.svg" data-background-size="750px"></section>
 					<section>
 						<h2>Server Side Class Diagram</h2>
 						<img src="img/PhpClassDiagram.png" alt="">
 					</section>
-					<section >
+					<section>
 						<h2>Client Side Class Diagram</h2>
 						<img src="img/JavascriptClassDiagram.png" alt="">
 					</section>
