Add final slide.

--- a/public/slideshow/index.html
+++ b/public/slideshow/index.html
@@ -230,7 +230,7 @@ carApp.config(function($routeProvider) {
 						<h1>Maintenance</h1>
 					</section>
 				</section>
-				<section>
+				<!--section>
 					<section>
 						<h1>Single Responsibility Principle</h1>
 					</section>
@@ -259,6 +259,10 @@ Scripts
 					<section>
 						<h2>Services</h2>
 					</section>
+				</section-->
+				<section>
+					<h2>Thank you for your attention!</h2>
+					<h1>Questions?</h1>
 				</section>
 			</div>
 
