Add svg class diagrams

--- a/public/slideshow/index.html
+++ b/public/slideshow/index.html
@@ -117,12 +117,12 @@
 					</section>
 					<section>
 						<h2>Server Side Class Diagram</h2>
-						<img src="img/PhpClassDiagram.png" alt="">
 					</section>
-					<section>
+					<section data-background="img/PhpClassDiagram.svg" data-background-size="750px"></section>
+					<section >
 						<h2>Client Side Class Diagram</h2>
-						<img src="img/JavascriptClassDiagram.png" alt="">
 					</section>
+					<section data-background="img/JavascriptClassDiagram.svg" data-background-size="750px"></section>
 				</section>
 				<section>
 					<section>
