Added section for futher development in slideshow

--- a/public/slideshow/index.html
+++ b/public/slideshow/index.html
@@ -224,12 +224,21 @@ carApp.config(function($routeProvider) {
 						</pre>
 					</section>
 					<section>
+						<h2>Further development</h2>
+						<ul>
+						    <li>Location based services</li>
+						    <li>PayPal</li>
+						</ul>
+					</section>
+
+
+					<!--<section>
 						<h1>Verification</h1>
 					</section>
 					<section>
 						<h1>Maintenance</h1>
 					</section>
-				</section>
+				</section> -->
 				<!--section>
 					<section>
 						<h1>Single Responsibility Principle</h1>
@@ -260,10 +269,13 @@ Scripts
 						<h2>Services</h2>
 					</section>
 				</section-->
+			</section>
+			<section>	
 				<section>
 					<h2>Thank you for your attention!</h2>
 					<h1>Questions?</h1>
 				</section>
+			</section>
 			</div>
 
 		</div>
