Add info to further developement section

--- a/public/slideshow/index.html
+++ b/public/slideshow/index.html
@@ -228,6 +228,7 @@ carApp.config(function($routeProvider) {
 						<ul>
 						    <li>Location based services</li>
 						    <li>PayPal</li>
+						    <li>Connection to external databases with car information</li>
 						</ul>
 					</section>
 
