Add link to the project page at Github in the last slide.

--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ Scripts
 				<section>
 					<h2>Thank you for your attention!</h2>
 					<h1>Questions?</h1>
+					<h3><a href="https://github.com/angelstam/HIT-SR-Project">Go to Project page</a>
 				</section>
 			</section>
 			</div>
